# mcp-server-grants-gov

./: .gitignore  LICENSE  README.md  app.yaml  databricks.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-bundle.yml
bundle/: artifacts.yml
bundle/resources/: apps.yml
src/grants_gov_mcp/: app.py  models.py  tools.py  utils.py
