[project]
name = "mcp-server-grants-gov"
version = "0.1.0"
description = "MCP server for the Grants.gov API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "build>=1.4.0",
    "fastmcp>=3.1.0",
    "hatchling>=1.29.0",
    "httpx>=0.27.0",
    "setuptools>=82.0.0",
    "wheel>=0.46.3",
]

[project.scripts]
grants-gov-mcp = "grants_gov_mcp.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grants_gov_mcp"]
